<resources>
    <string name="app_name">Popular Movies Stage 1</string>
    <string name="img_poster_cd">Poster Movie</string>
    <string name="detail_error_message">Data not avalible!</string>
    <string name="original_title_label">Original Title</string>
    <string name="user_rating_label">User Rating</string>
    <string name="release_date_label">Release date</string>
    <string name="synopsis_label">Synopsis</string>
    <string name="title_activity_settings">Settings</string>
    <string name="error_connection">Looks like your connection is failing!</string>
    <string name="error_data">Error on the data!</string>
    <string name="try_again">Try again!</string>

    <string name="key_sort_by">key_sort_by</string>
    <string name="pref_title_sortby">Sort by</string>

    <string name="popular_param_sortby_url">popular</string>
    <string name="top_rated_param_sortby_url">top_rated</string>
    <string name="popular_label_sortby_url">Popular</string>
    <string name="top_rated_label_sortby_url">Top Raiting</string>
    <string name="movie_poster">Movie poster</string>

    <string-array name="pref_sortby_list_titles">
        <item>@string/popular_label_sortby_url</item>
        <item>@string/top_rated_label_sortby_url</item>
    </string-array>
    <string-array name="pref_sortby_list_values">
        <item>@string/popular_param_sortby_url</item>
        <item>@string/top_rated_param_sortby_url</item>
    </string-array>



</resources>
